Fix description alignment.

--- a/Resources/Css/style.css
+++ b/Resources/Css/style.css
@@ -90,20 +90,26 @@ body {
 }
 
 .threeimages {
-  width: 1200px;
+  width: 1000px;
   margin: 0 auto;
-  flex-direction: row;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
 .threedescription {
-  display: inline-flex;
+  width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center
+}
+
+.threedescription p {
+  width: 300px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-  width: 395px;
-  margin: 0 auto;
   padding-top: 5px;
+  padding-bottom: 5px;
 }
